# translation-bot

./: .gitignore  Dockerfile  Dockerfile-migrations  README.md  alembic.bash  alembic.ini  docker-compose.yaml  pyproject.toml
src/: __main__.py
src/adapters/: director.py
src/adapters/database/: __init__.py  db_gateway.py
src/adapters/database/connection/: __init__.py  config.py  session_factory.py
src/adapters/database/migrations/: env.py
src/adapters/database/models/: __init__.py
src/adapters/identity_provider/: __init__.py  identity_provider.py  telegram.py
src/adapters/identity_provider/plugins/: __init__.py  telegram.py
src/adapters/translator/: __init__.py  config.py  converters.py  exceptions.py  translator.py
src/application/translator/: exceptions.py
src/application/translator/commands/: __init__.py  translate_message.py
src/application/translator/interfaces/: db_gateway.py  reader.py  repo.py  translator.py
src/application/translator/models/: command.py  dto.py  query.py
src/application/translator/queries/: __init__.py  translation_history_by_user_id.py
src/application/user/: exceptions.py
src/application/user/commands/: __init__.py  add_user.py
src/application/user/interfaces/: db_gateway.py  reader.py  repo.py
src/application/user/models/: command.py  query.py
src/application/user/queries/: __init__.py  check_exist.py
src/common/applications/: exceptions.py
src/presentation/telegram/: __init__.py  config.py  main.py
tests/integrations/test_database/: conftest.py
tests/unit/: test_translator.py
(+37 files in other folders)
