[tool.poetry]
name = "translation-bot"
version = "0.1.0"
description = "Бот-переводчик с английского на русский на основе DeepL"
authors = ["poorpen <roma.polovik.03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "23.1.0"
aiogram = "3.1.1"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
annotated-types = "0.5.0"
async-timeout = "4.0.3"
attrs = "23.1.0"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
frozenlist = "1.4.0"
greenlet = "3.0.0"
idna = "3.4"
iniconfig = "2.0.0"
magic-filter = "1.0.12"
multidict = "6.0.4"
packaging = "23.2"
pluggy = "1.3.0"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
sqlalchemy = "2.0.21"
typing-extensions = "4.7.1"
yarl = "1.9.2"
asyncpg = "^0.28.0"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-asyncio = "^0.21.1"
alembic = "^1.12.0"
testcontainers = { extras = ["postgres"], version = "^3.7.1" }
faker = "^19.6.2"
pytest-aiohttp = "^1.0.5"
psycopg2 = "^2.9.9"
asyncpg = "^0.28.0"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
